--- a/languages/sql/sqlite/self.org
+++ b/languages/sql/sqlite/self.org
@@ -1,24 +1,28 @@
-- home https://sqlite.org/
-- source (C) https://www.sqlite.org/src/doc/trunk/README.md
-- faq https://www.sqlite.org/faq.html
-- wiki https://en.wikipedia.org/wiki/SQLite
-  - Author: Richard Hipp
-  - 2000- (db format released 2004)
-  - embedded database
-  - Include a hidden "rowid" index column (uses the pkey if set)
-  - Max database size 281 TB
-  - Implements most of ~SQL-92~
-    - triggers
-    - readonly views
+|------------+------------------------------------------------|
+| home       | https://sqlite.org/                            |
+| source (C) | https://www.sqlite.org/src/doc/trunk/README.md |
+| faq        | https://www.sqlite.org/faq.html                |
+| wiki       | https://en.wikipedia.org/wiki/SQLite           |
+|------------+------------------------------------------------|
+
+- Author: Richard Hipp
+- 2000- (db format released 2004)
+- embedded database
+- Include a hidden "rowid" index column (uses the pkey if set)
+- Max database size 281 TB
+- Implements most of ~SQL-92~
+  - triggers
+  - readonly views
+- Dynamically Typed
+  - Types are assigned to individual values, NOT columns
+  - BUT sqlite will try to convert it to the prefered column type
+  - Support for strict tables (2015 - 3.37.1)
+- Changelog
   - CONCAT()                (2023 - 3.44.0)
   - Foreign Key constraints (2009 - 3.16.19)
   - Full Text Search
     - FTS4 (2010 - 3.7.4)
     - FTS5 (2015 - 3.8.11)
-  - Dynamically Typed
-    - Types are assigned to individual values, NOT columns
-    - BUT sqlite will try to convert it to the prefered column type
-    - Support for strict tables (2015 - 3.37.1)
 
 - gotchas https://sqlite.org/quirks.html
 - diy https://cstack.github.io/db_tutorial/
@@ -34,13 +38,6 @@
 - wasm https://sqlite.org/wasm/doc/trunk/index.md
   - vanilla JS https://sqlite.org/wasm/doc/trunk/demo-123.md
   - persistence https://sqlite.org/wasm/doc/trunk/persistence.md
-
-- Types
-  - INTEGER: also includes literals true/false which map to 1/0
-  - REAL: floating point numbers
-  - TEXT: readable text
-  - BLOB: binary data
-  - NULL: no data
 
 - Each table in the FROM clause of a query can use at most one index
   - After it uses one, it needs to SCAN each row for the other index
@@ -68,6 +65,14 @@
     - replace
   - INSERT OR IGNORE           - UNIQUE
   - INSERT ON CONFLICT IGNORE  - UNIQUE+NULL
+
+** Types
+
+- INTEGER: also includes literals true/false which map to 1/0
+- REAL: floating point numbers
+- TEXT: readable text
+- BLOB: binary data
+- NULL: no data
 
 ** Command
 
@@ -105,6 +110,8 @@ https://www.sqlite.org/lang_corefunc.html
 ** Numeric       Functions
 - https://www.sqlite.org/lang_mathfunc.html
 - [a][cos|sin|tan][h],log[2|10]
+|-----------+-------------+--------------------------------------------------|
+|           | arguments   | description                                      |
 |-----------+-------------+--------------------------------------------------|
 | abs       | n           | returns the absolute value,                      |
 | max       | x  ,y  ,... |                                                  |
@@ -157,6 +164,8 @@ https://www.sqlite.org/lang_datefunc.html
 |--------------+-------+-----------------|
 ** Aggregate     Functions
 https://www.sqlite.org/lang_aggfunc.html
+|--------------+---------+-------------------------------------------------------|
+|              | args    | description                                           |
 |--------------+---------+-------------------------------------------------------|
 | avg          | x       | interprets string/blob values as zero, floating point |
 | count        | x       | number of times that x is not-null                    |
@@ -221,6 +230,8 @@ https://www.sqlite.org/fts5.html
 * cli (metacomands)
 - $ sqlite3 :memory: # or just not pass any argument
 - cli getting started https://www.sqlite.org/cli.html (TODO 6)
+|------------+-------------------+---------------------------------------------------|
+|            | argument          | description                                       |
 |------------+-------------------+---------------------------------------------------|
 | .bail      | on/off            | exits on error (also -bail)                       |
 | .dump      | [TABLEPAT]        | sql dump whole db or table                        |
